fix list modules void, animtions on button collapse modules

--- a/app/modules/users/form/permission/custom-permission-page/custom-permission-page.scss
+++ b/app/modules/users/form/permission/custom-permission-page/custom-permission-page.scss
@@ -11,7 +11,7 @@
         margin: 5px 0;
         border: 1px solid rgba(2, 2, 2, .38);
         box-shadow: 0px 2px 7px;
-        padding: 5px;
+        padding: 10px;
         display: flex;
         flex-direction: column;
         overflow: hidden;
@@ -19,6 +19,16 @@
             margin: 0;
             &:hover {
                 color: #d9534f;
+            }
+        }
+        .btn-modules {
+            margin-bottom: 0;
+            text-decoration: none;
+            .fa {
+                transition: 1s;
+                &.-up {
+                    transform: rotate(180deg);
+                }
             }
         }
     }
@@ -30,7 +40,7 @@
             width: 60ch;
             > .module {
                 display: flex;
-                justify-content: space-between;
+                justify-content: space-around;
                 align-items: center;
                 padding: 5px;
                 margin: 5px;
@@ -62,7 +72,7 @@
 
         > .head > .wrapper-delete {
             position: relative;
-            left: 47%;
+            left: 48%;
             transition: 1s;
             &.-trash-transitions {
                 left: 0;
@@ -81,10 +91,6 @@
                     }
                 }
             }
-        }
-
-        > .btn-modules {
-            margin-bottom: 0;
         }
     }
 
